...
export const localeNames: Readonly<Record<Locale, string>> = Object.freeze({
  en: 'English',
  'es-419': 'Español (Latinoamérica)',
  fr: 'Français',
  hi: 'हिन्दी',
  ru: 'Русский',
  ar: 'العربية',
  'zh-Hans': '简体中文',
  sw: 'Kiswahili',
  'pt-BR': 'Português (Brasil)',
  id: 'Bahasa Indonesia',
  vi: 'Tiếng Việt',
  bn: 'বাংলা',
...
