appId: ${APP_ID}
name: The three tabs Home, Study and Formation
---
- runFlow: common/start.yaml
- takeScreenshot: tabs-1-home
- tapOn:
    text: 'Study'
    rightOf: 'Home'
- extendedWaitUntil:
    visible: 'Library'
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: tabs-2-study
- tapOn: 'Formation'
- extendedWaitUntil:
    visible: 'Formation'
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: tabs-3-formation
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          text: 'Home'
          above: 'Back'
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Home'
- extendedWaitUntil:
    visible: 'Switch theme'
    timeout: 15000
- takeScreenshot: tabs-4-home-again
